--- a/dispatcher_application/user_management/templates/user_management/user_update.html
+++ b/dispatcher_application/user_management/templates/user_management/user_update.html
@@ -32,23 +32,21 @@
         {% csrf_token %}
       
         <p>
-            <label for="{{ form.first_name.auto_id }}">{{ form.first_name.label }}</label><br>
+            <label for="{{ form.first_name.auto_id }}">{{ form.first_name.label }}:</label>
             {{ form.first_name }}
         </p>
         <p>
-            <label for="{{ form.last_name.auto_id }}">{{ form.last_name.label }}</label><br>
+            <label for="{{ form.last_name.auto_id }}">{{ form.last_name.label }}:</label>
             {{ form.last_name }}
         </p>
         <p>
-            <label for="{{ form.branch.auto_id }}">{{form.branch.label}}</label><br>
+            <label for="{{ form.branch.auto_id }}">{{form.branch.label}}:</label>
             {{ form.branch }}
         </p>
         <p>
-            <label for="{{ form.is_active.auto_id }}">{{form.is_active.label}}</label>
+            <label for="{{ form.is_active.auto_id }}">{{form.is_active.label}}:</label>
             {{ form.is_active }}
         </p>
-
-        <input class="btn btn-primary" id="btn-f2" type="submit" value="Update" style="float: right;">
 
         <div id="err">
             {% for field in form %}
@@ -60,6 +58,7 @@
                 {{ form.non_field_errors }}
             {% endif %}
         </div>
+        <input class="btn btn-primary" id="btn-f2" type="submit" value="Update" style="float: right;">
     </form>
 </div>
 {% endblock %}
