--- a/dispatcher_application/authentication/templates/authentication/reset_password.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password.html
@@ -2,20 +2,25 @@
 
 {% block title %}Reset password{% endblock %}
 
+{% block nav %} 
+    {% include "navbar.html" %}
+{% endblock nav %}
+
 {% block content %}
-	<div class="container" style="text-align: left;">
-		<a class="bi bi-arrow-bar-left btn btn-md" href="{% url 'login' %}"></a>
-		
+<br>
+<a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'login' %}" style="margin-left: 350px"></a>
+	<div class="container d-flex justify-content-center text" style="text-align: left; padding: auto;">
+		<br>
 		<h3>Password reset</h3>
 		
 		<p>Forgotten your password? Enter your email address below, 
 			and we’ll email instructions for reseting your password.</p>
 
-		<form method="POST" class="forms-class">
+		<form method="POST" class="text">
 			{% csrf_token %}
 			{{form.as_p}}
 			
-			<input type="submit" name="Send email" class="button-class">
+			<input type="submit" name="Send email" class="btn btn-primary" style="float: right;">
 		</form>
 	</div>
 {% endblock %}
