--- a/dispatcher_application/transport_management/templates/transport_management/transportation_list.html
+++ b/dispatcher_application/transport_management/templates/transport_management/transportation_list.html
@@ -45,7 +45,7 @@
 <br>
 <h2>Transportations</h2>
 <a class="bi bi-plus-circle btn btn-lg" href="{% url 'transportation-add' %}"></a>
-<button class="bi bi-trash3-fill btn btn-lg" style="font-size: 1.6rem;" type="submit"></button>
+<button class="bi bi-trash btn btn-lg" style="font-size: 1.6rem;" type="submit"></button>
 <form action="" method="POST">
     {% csrf_token %}
     <div style="overflow-x:auto;">
@@ -65,16 +65,20 @@
         <tbody>
 
         {% for t in object_list %}
-            <td>{{ t.departure_time }}</td>
-            <td>{{ t.from_id }}</td>
-            <td>{{ t.arrival_time }}</td>
-            <td>{{ t.to_id }}</td>
-            <td>{{ t.ldm }}</td>
-            <td>{{ t.owner_id.email }}</td>
-            <td><a class="bi bi-eye-fill btn btn-sm" href=""></a></td>
-            <td><input href="" class="form-check-input" type="checkbox" name="data" id="data" value={{ t.id }}></td>
+            <tr>
+                <td>{{ t.departure_time }}</td>
+                <td>{{ t.from_id }}</td>
+                <td>{{ t.arrival_time }}</td>
+                <td>{{ t.to_id }}</td>
+                <td>{{ t.ldm }}</td>
+                <td>{{ t.owner_id.email }}</td>
+                {% if t.owner_id.id == user.id %}
+                    <td><a class="bi bi-pencil-square btn btn-sm" href="{% url 'transportation-update' t.id %}"></a></td> 
+                {% else %}
+                    <td><a class="bi bi-eye-fill btn btn-sm" href="{% url 'transportation-detail' t.id %}"></a></td>
+                {% endif %}
+                <td><input href="" class="form-check-input" type="checkbox" name="data" id="data" value={{ t.id }}></td>
             </tr>
-        
         {% endfor %}
         </tbody>
     </table>
