--- a/dispatcher_application/user_settings/templates/user_settings/profile_settings.html
+++ b/dispatcher_application/user_settings/templates/user_settings/profile_settings.html
@@ -18,9 +18,9 @@
 		</ul>
         <div class="card-body">
             <h3 class="card-title">Profile Information</h3>
-            <p class="card-text">Name: {{ last_name }} {{ first_name }}</p>
-            <p class="card-text">Email: {{ email }}</p>
-            <p class="card-text">Root branch: {{ branch }}</p>
+            <p class="card-text">Name: {{ user.last_name }} {{ user.first_name }}</p>
+            <p class="card-text">Email: {{ user.email }}</p>
+            <p class="card-text">Root branch: {{ user.branch }}</p>
         </div>
         <ul class="list-group list-group-flush"></ul>
         <div class="card-body">
