--- a/dispatcher_application/known_locations_management/templates/known_locations_management/location_list.html
+++ b/dispatcher_application/known_locations_management/templates/known_locations_management/location_list.html
@@ -39,7 +39,7 @@
                 <td>{{ location.city }}</td>
                 <td>{{ location.country }}</td>
                 <td>
-                    <a class="bi bi-pencil-square btn btn-sm" href="{% url 'location-update' location.id %}"></a>
+                    <a class="bi bi-pencil-fill btn btn-sm" href="{% url 'location-update' location.id %}"></a>
                 </td>
                 <td>
                     <a class="bi bi-x-lg btn btn-sm" href="{% url 'location-delete' location.id %}"></a>
