Setting up email config

--- a/dispatcher_application/authentication/templates/authentication/login.html
+++ b/dispatcher_application/authentication/templates/authentication/login.html
@@ -26,9 +26,9 @@
             <button class="btn btn-primary">Login</button>
         </div>
 
-        {% comment %} <div class="bottom-links">
+        <div class="bottom-links">
             <p>Forgot password? <a href="{% url 'password_reset' %}">Reset password</a></p>
-        </div> {% endcomment %}
+        </div>
         
         {% if error_message %}
             <div>
