Dorobeny datalist pri pridavani transportov, dorobeny update form

--- a/dispatcher_application/transport_management/templates/transport_management/transportation_form.html
+++ b/dispatcher_application/transport_management/templates/transport_management/transportation_form.html
@@ -14,7 +14,7 @@
                 <a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'transportation-list' %}"></a>
             </div>
             <div class="col-6" style="text-align: center;">
-                <h2>Add transport</h2>
+                <h2>{{ form_name }}</h2>
             </div>
             <div class="col">
             </div>
@@ -22,47 +22,35 @@
     </div>
 
     <div class="transport d-flex justify-content-center" style="overflow-x:auto;">
-                <form method="POST"  class="formular">
-{#        <form action="" method="POST" onSubmit="return validateForm()" class="formular">#}
+        <form action="" method="POST" onSubmit="return validateForm()" class="formular">
 
             {% csrf_token %}
-
-            {#            <p>#}
-            {#                <label for="{{ form.from_id.auto_id }}">{{ form.from_id.label }}</label><br>#}
-            {#                <input list="from_locations" class="input" name="from_id" id="{{ form.from_id.auto_id }}" required#}
-            {#                       placeholder="12345,City,COUNTRY CODE">#}
-            {##}
-            {#                <datalist id="from_locations">#}
-            {#                    {% for location in location_list %}#}
-            {#                        <option id={{ location.id }} value="{{ location.zip_code }},{{ location.city }},{{ location.country }}"></option>#}
-            {#                    {% empty %}#}
-            {#                        <option></option>#}
-            {#                    {% endfor %}#}
-            {#                </datalist>#}
-            {#            </p>#}
-            {##}
-            {#            <p>#}
-            {#                <label for="{{ form.to_id.auto_id }}">{{ form.to_id.label }}</label><br>#}
-            {#                <input list="to_locations" class="input" name="to_id" id="{{ form.to_id.auto_id }}" required#}
-            {#                       placeholder="12345,City,COUNTRY CODE">#}
-            {##}
-            {#                <datalist id="to_locations">#}
-            {#                                 {{ form.to_id }}#}
-            {##}
-            {#                </datalist>#}
-            {#            </p>#}
-
 
             <p>
                 <label for="{{ form.from_id.auto_id }}">{{ form.from_id.label }}</label><br>
                 {{ form.from_id }}
+
+                <datalist id="from_locations">
+                    {% for location in location_list %}
+                        <option id={{ location.id }} value="{{ location.zip_code }},{{ location.city }},{{ location.country }}"></option>
+                    {% empty %}
+                        <option></option>
+                    {% endfor %}
+                </datalist>
             </p>
 
             <p>
                 <label for="{{ form.to_id.auto_id }}">{{ form.to_id.label }}</label><br>
                 {{ form.to_id }}
-            </p>
 
+                <datalist id="to_locations">
+                    {% for location in location_list %}
+                        <option id={{ location.id }} value="{{ location.zip_code }},{{ location.city }},{{ location.country }}"></option>
+                    {% empty %}
+                        <option></option>
+                    {% endfor %}
+                </datalist>
+            </p>
 
             <p>
                 <label for="{{ form.departure_time.auto_id }}">{{ form.departure_time.label }}</label><br>
@@ -89,83 +77,14 @@
                 {{ form.info }}
             </p>
 
-
-            {#        #}
-            {##}
-            {#            <div class="input-box">#}
-            {#                <label for="from_id" class="transportlabel">From:</label>#}
-            {#                <input list="from_locations" class="input" name="from_id" id="from_id" required#}
-            {#                       pattern="([0-9]{5,10})[ ,/.]([A-Z][a-z]{1,69})[ ,/.]([A-Z]{2,4})"#}
-            {#                       placeholder="12345,City,COUNTRY CODE">#}
-            {#                <datalist id="from_locations">#}
-            {#                    {% for location in location_list %}#}
-            {#                        <option id={{ location.id }} value="{{ location.zip_code }},{{ location.city }},{{ location.country }}"></option>#}
-            {#                    {% empty %}#}
-            {#                        <option></option>#}
-            {#                    {% endfor %}#}
-            {#                </datalist>#}
-            {#            </div>#}
-            {#            <div class="input-box">#}
-            {#                <label for="to_id" class="label" class="transportlabel">To:</label>#}
-            {#                <input list="to_locations" class="input" name="to_id" id="to_id" required#}
-            {#                       pattern="([0-9]{5,10})[ ,/.]([A-Z][a-z]{1,69})[ ,/.]([A-Z]{2,4})"#}
-            {#                       placeholder="12345,City,COUNTRY CODE">#}
-            {#                <datalist id="to_locations">#}
-            {#                    {% for location in location_list %}#}
-            {#                        <option id={{ location.id }} value="{{ location.zip_code }},{{ location.city }},{{ location.country }}"></option>#}
-            {#                    {% empty %}#}
-            {#                        <option value></option>#}
-            {#                    {% endfor %}#}
-            {#                </datalist>#}
-            {#            </div>#}
-            {##}
-            {#            <div class="input-box">#}
-            {##}
-            {#                <label for="departure_date" class="transportlabel">Departure date:</label>#}
-            {#                <input type="date" class="input" name="departure_date" id="departure_date" value="{{ departure_date }}"#}
-            {#                       required>#}
-            {#                &emsp;#}
-            {#                <label for="departure_time" class="transportlabel">Time:</label>#}
-            {#                <input type="time" class="input" name="departure_time" id="departure_time" value="{{ departure_time }}"#}
-            {#                       required>#}
-            {#            </div>#}
-            {##}
-            {#            <div class="input-box">#}
-            {#                <label for="arrival_date" class="label2 transportlabel">Arrival date:</label>#}
-            {#                <input type="date" class="input" name="arrival_date" id="arrival_date" value="{{ arrival_date }}"#}
-            {#                       required>#}
-            {#                &emsp;#}
-            {#                <label for="arrival_time" class="transportlabel">Time:</label>#}
-            {#                <input type="time" class="input" name="arrival_time" id="arrival_time" value="{{ arrival_time }}"#}
-            {#                       required>#}
-            {#            </div>#}
-            {##}
-            {#            <div class="input-box">#}
-            {#                <label for="ldm" class="label3 transportlabel">L(m):</label>#}
-            {#                <input type="number" step="0.01" class="input" name="ldm" id="ldm" value="{{ ldm }}" required min="0"#}
-            {#                       max="13.6" placeholder="0-13.6">#}
-            {#            </div>#}
-            {##}
-            {#            <div class="input-box">#}
-            {#                <label for="weight" class="transportlabel">Weight:</label>#}
-            {#                <input type="number" class="input" name="weight" id="weight" value="{{ weight }}" required min="0"#}
-            {#                       max="24000" placeholder="0-24 000">#}
-            {#            </div>#}
-            {##}
-            {#            <div class="input-box">#}
-            {#                <label for="info" class="label4 transportlabel">Notes:</label>#}
-            {#                <input type="text" class="input" name="info" id="info" value="{{ info }}">#}
-            {#            </div>#}
-
             {% if error_message %}
                 <div>
                     {{ error_message }}
                 </div>
             {% endif %}
 
-            {#                        <button type="submit" class="btn btn-primary" id="btn-f2" style="float: right;">{{ form_action_type }}"</button>#}
-                   <input class="btn btn-primary" id="btn-f2" type="submit" value="Add">
-
+            <button type="submit" class="btn btn-primary" id="btn-f2"
+                    style="float: right;">{{ form_action_type }}</button>
 
         </form>
     </div>
